Add Kotlin support (#153)
Added kotlin, detekt and konsist.

# Checklist

The following aspects have been respected by the author of this pull
request, confirmed by both pull request assignee **and** reviewer:

* Adherence to coding conventions
  * [x] Pull Request Assignee
  * [x] Reviewer
* Adherence to javadoc conventions
  * [x] Pull Request Assignee
  * [x] Reviewer
* Changelog update (necessity checked and entry added or not added
respectively)
  * [x] Pull Request Assignee
  * [x] Reviewer
* README update (necessity checked and entry added or not added
respectively)
  * [x] Pull Request Assignee
  * [x] Reviewer
* config update (necessity checked and entry added or not added
respectively)
  * [x] Pull Request Assignee
  * [x] Reviewer
* SDCcc executable ran against a test device (if necessary)
  * [x] Pull Request Assignee
  * [x] Reviewer

--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -20,7 +20,7 @@
         <spotbugsVersion>4.7.3</spotbugsVersion>
         <checkstyleConfigDir>../checkstyle</checkstyleConfigDir>
         <bouncyCastleVersion>1.67</bouncyCastleVersion>
-
+        <detektVersion>1.23.5</detektVersion>
         <!-- name of the directory inside the archive -->
         <jreDirectoryName>jdk-17.0.5+8-jre</jreDirectoryName>
         <jreBasePath>./jre</jreBasePath>
@@ -245,6 +245,25 @@
             <version>2.0.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib -->
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-test-junit5 -->
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit5</artifactId>
+            <version>${kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.lemonappdev/konsist -->
+        <dependency>
+            <groupId>com.lemonappdev</groupId>
+            <artifactId>konsist</artifactId>
+            <version>0.15.1</version>
+        </dependency>
     </dependencies>
 
     <reporting>
@@ -365,7 +384,7 @@
                 </executions>
                 <configuration>
                     <includeTests>true</includeTests>
-                    <excludeFilterFile>../spotbugs/filter.xml</excludeFilterFile>
+                    <excludeFilterFile>${project.basedir}/../dev_config/filter.xml</excludeFilterFile>
                 </configuration>
             </plugin>
 
@@ -414,6 +433,31 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.github.ozsie</groupId>
+                <artifactId>detekt-maven-plugin</artifactId>
+                <version>${detektVersion}</version>
+                <configuration>
+                    <buildUponDefaultConfig>true</buildUponDefaultConfig>
+                    <config>${project.basedir}/../dev_config/detekt.yml</config>
+                    <report>html:${project.build.directory}/detekt.html</report>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>io.gitlab.arturbosch.detekt</groupId>
+                        <artifactId>detekt-formatting</artifactId>
+                        <version>${detektVersion}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
