Add Kotlin support (#153)
Added kotlin and detekt.

(partly cherry picked from commit 4d84e9ea97fb48cb5a9c7c2d1530f47734cf3a10)

Signed-off-by: Malte Grebe-Lüth <malte.grebe-lueth@draeger.com>

--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,22 @@
         <execPluginVersion>3.1.0</execPluginVersion>
         <jakartaXmlBindApiVersion>4.0.0</jakartaXmlBindApiVersion>
         <comSunXmlBindVersion>4.0.1</comSunXmlBindVersion>
+        <kotlin.version>1.9.23</kotlin.version>
     </properties>
 
     <build>
         <plugins>
+
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+                <!-- You can set this option to automatically take information about lifecycles -->
+                <extensions>true</extensions>
+                <configuration>
+                    <jvmTarget>17</jvmTarget>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
