--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@
                         </manifestSections>
                     </archive>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
