Update detekt config comments according to team discussions

--- a/dev_config/detekt.yml
+++ b/dev_config/detekt.yml
@@ -7,6 +7,13 @@ comments:
     active: true
   OutdatedDocumentation:
     active: true
+  UndocumentedPublicClass:
+    active: true
+  UndocumentedPublicFunction:
+    active: true
+  UndocumentedPublicProperty:
+    active: true
+
 complexity:
   NamedArguments:
     active: true
