increased detekt NestedBlockDepth threshold to 6.

--- a/dev_config/detekt.yml
+++ b/dev_config/detekt.yml
@@ -12,6 +12,8 @@ complexity:
     active: true
   ReplaceSafeCallChainWithRun:
     active: true
+  NestedBlockDepth:
+    threshold: 6
 exceptions:
   ObjectExtendsThrowable:
     active: true
