--- a/dev_config/detekt.yml
+++ b/dev_config/detekt.yml
@@ -19,6 +19,8 @@ complexity:
     active: true
   ReplaceSafeCallChainWithRun:
     active: true
+  NestedBlockDepth:
+    threshold: 6
 exceptions:
   ObjectExtendsThrowable:
     active: true
