--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -264,6 +264,12 @@
             <artifactId>konsist</artifactId>
             <version>0.15.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
     <reporting>
