--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -473,6 +473,43 @@
 
     <profiles>
         <profile>
+            <id>noTest</id>
+            <activation>
+                <property>
+                    <name>noTest</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.2.5</version>
+                        <configuration>
+                            <skipTests>true</skipTests>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>3.2.5</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.junit.jupiter</groupId>
+                                <artifactId>junit-jupiter-engine</artifactId>
+                                <version>${junitVersion}</version>
+                            </dependency>
+                        </dependencies>
+                        <configuration>
+                            <skipTests>true</skipTests>
+                            <skipITs>true</skipITs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>exec-sdccc</id>
             <build>
                 <plugins>
