--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -286,8 +286,58 @@
         </plugins>
     </reporting>
     <build>
+        <pluginManagement>
+            <plugins>
+                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.2.5</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.junit.jupiter</groupId>
+                            <artifactId>junit-jupiter-engine</artifactId>
+                            <version>${junitVersion}</version>
+                        </dependency>
+                    </dependencies>
+                    <configuration>
+                        <excludes>
+                            <!-- exclude integration tests -->
+                            <exclude>**/*IT.java</exclude>
+                            <!-- exclude tests used in tests -->
+                            <exclude>it/com/draeger/medical/sdccc/testsuite_it_mock_tests/**</exclude>
+                        </excludes>
+                        <!-- workaround for bug in the attach api required for certain JDK builds -->
+                        <!-- see also: https://stackoverflow.com/a/25439003 -->
+                        <argLine>-Xmx3072m -XX:+StartAttachListener</argLine>
+                        <forkCount>0.25C</forkCount>
+                        <reuseForks>true</reuseForks>
+                    </configuration>
+                </plugin>
+                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>3.2.5</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.junit.jupiter</groupId>
+                            <artifactId>junit-jupiter-engine</artifactId>
+                            <version>${junitVersion}</version>
+                        </dependency>
+                    </dependencies>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>integration-test</goal>
+                                <goal>verify</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
@@ -320,55 +370,6 @@
                 <configuration>
                     <release>17</release>
                 </configuration>
-            </plugin>
-
-            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>${junitVersion}</version>
-                    </dependency>
-                </dependencies>
-                <configuration>
-                    <excludes>
-                        <!-- exclude integration tests -->
-                        <exclude>**/*IT.java</exclude>
-                        <!-- exclude tests used in tests -->
-                        <exclude>it/com/draeger/medical/sdccc/testsuite_it_mock_tests/**</exclude>
-                    </excludes>
-                    <!-- workaround for bug in the attach api required for certain JDK builds -->
-                    <!-- see also: https://stackoverflow.com/a/25439003 -->
-                    <argLine>-Xmx3072m -XX:+StartAttachListener</argLine>
-                    <forkCount>0.25C</forkCount>
-                    <reuseForks>true</reuseForks>
-                </configuration>
-            </plugin>
-
-            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.2.5</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>${junitVersion}</version>
-                    </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
             <!-- https://mvnrepository.com/artifact/com.github.spotbugs/spotbugs-maven-plugin -->
@@ -472,6 +473,34 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>noTest</id>
+            <activation>
+                <property>
+                    <name>noTest</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <skipTests>true</skipTests>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <skipTests>true</skipTests>
+                            <skipITs>true</skipITs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>exec-sdccc</id>
             <build>
