--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -640,7 +640,7 @@
                                         <fileVersion>${revision}.0</fileVersion>
                                         <txtFileVersion>${revision}${changelist}</txtFileVersion>
                                         <fileDescription>${project.name}</fileDescription>
-                                        <copyright>2024 Draegerwerk AG &amp; Co. KGaA</copyright>
+                                        <copyright>2023-2024 Draegerwerk AG &amp; Co. KGaA</copyright>
                                         <productVersion>${revision}.0</productVersion>
                                         <txtProductVersion>${revision}${changelist}</txtProductVersion>
                                         <productName>${project.name}</productName>
