--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -270,6 +270,12 @@
             <artifactId>gson</artifactId>
             <version>2.11.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fatboyindustrial.gson-javatime-serialisers</groupId>
+            <artifactId>gson-javatime-serialisers</artifactId>
+            <version>1.1.2</version>
+        </dependency>
     </dependencies>
 
     <reporting>
