explicit nullable and allow !! in testclasses

--- a/dev_config/detekt.yml
+++ b/dev_config/detekt.yml
@@ -89,7 +89,8 @@ potential-bugs:
   UnnecessaryNotNullCheck:
     active: true
   UnsafeCallOnNullableType:
-    excludes: []
+    active: true
+    excludes: "**/src/test/**"
 
 style:
   BracesOnIfStatements:
