--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -625,7 +625,11 @@
                             </execution>
                         </executions>
                     </plugin>
-
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <configuration><skip>true</skip></configuration>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
