turn NullableToStringCall back on

--- a/dev_config/detekt.yml
+++ b/dev_config/detekt.yml
@@ -81,7 +81,7 @@ potential-bugs:
   NullCheckOnMutableProperty:
     active: true
   NullableToStringCall:
-    active: false
+    active: true
   PropertyUsedBeforeDeclaration:
     active: true
   UnconditionalJumpStatementInLoop:
