--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -555,6 +555,12 @@
                 <artifactId>maven-antrun-plugin</artifactId>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 
     <profiles>
