--- a/configuration/config.toml
+++ b/configuration/config.toml
@@ -4,6 +4,7 @@ GraphicalPopups=true
 TestExecutionLogging=true
 EnableMessageEncodingCheck=true
 SummarizeMessageEncodingErrors=true
+MinCollectDataTime=20
 
 [SDCcc.TLS]
 FileDirectory="./configuration"
