--- a/dev_config/detekt.yml
+++ b/dev_config/detekt.yml
@@ -1,3 +1,6 @@
+config:
+  warningsAsErrors: true
+
 comments:
   DeprecatedBlockTag:
     active: true
@@ -7,20 +10,66 @@ comments:
     active: true
   OutdatedDocumentation:
     active: true
+  UndocumentedPublicClass:
+    active: true
+    excludes: []
+  UndocumentedPublicFunction:
+    active: true
+  UndocumentedPublicProperty:
+    active: true
+    excludes: []
+
 complexity:
+  ComplexCondition:
+    threshold: 6
+  ComplexInterface:
+    active: true
+  CyclomaticComplexMethod:
+    threshold: 20
+  LongMethod:
+    active: false
+  MethodOverloading:
+    active: true
   NamedArguments:
     active: true
+  NestedBlockDepth:
+    active: false
   ReplaceSafeCallChainWithRun:
     active: true
+  StringLiteralDuplication:
+    active: true
+    excludes: []
+
 exceptions:
+  NotImplementedDeclaration:
+    active: true
   ObjectExtendsThrowable:
     active: true
   ThrowingExceptionInMain:
     active: true
+  TooGenericExceptionCaught:
+    excludes: []
+
+naming:
+  FunctionMinLength:
+    active: true
+    minimumFunctionNameLength: 3
+  LambdaParameterNaming:
+    active: true
+
 performance:
   CouldBeSequence:
     active: true
+  ForEachOnRange:
+    excludes: []
+  SpreadOperator:
+    excludes: []
+  UnnecessaryPartOfBinaryExpression:
+    active: true
+
 potential-bugs:
+  CastNullableToNonNullableType:
+    active: true
   CastToNullableType:
     active: true
   DontDowncastCollectionTypes:
@@ -29,36 +78,115 @@ potential-bugs:
     active: true
   ExitOutsideMain:
     active: true
+  ImplicitUnitReturnType:
+    active: true
   MissingPackageDeclaration:
+    active: true
+  NullCheckOnMutableProperty:
+    active: true
+  NullableToStringCall:
+    active: true
+  PropertyUsedBeforeDeclaration:
     active: true
   UnconditionalJumpStatementInLoop:
     active: true
+  UnnecessaryNotNullCheck:
+    active: true
+  UnsafeCallOnNullableType:
+    excludes: []
+
 style:
+  BracesOnIfStatements:
+    active: true
+  BracesOnWhenStatements:
+    active: true
   CascadingCallWrapping:
     active: true
   ClassOrdering:
     active: true
+  CollapsibleIfStatements:
+    active: true
+  DataClassContainsFunctions:
+    active: true
+  DataClassShouldBeImmutable:
+    active: true
+  DoubleNegativeLambda:
+    active: true
   EqualsOnSignatureLine:
     active: true
-  BracesOnIfStatements:
+  ExplicitCollectionElementAccessMethod:
     active: true
+  ExpressionBodySyntax:
+    active: true
+  ForbiddenAnnotation:
+    active: true
+  ForbiddenComment:
+    active: true
+    comments:
+      - reason: 'Forbidden FIXME todo marker in comment, please fix the problem.'
+        value: 'FIXME:'
+      - reason: 'Forbidden STOPSHIP todo marker in comment, please address the problem before shipping the code.'
+        value: 'STOPSHIP:'
+  ForbiddenMethodCall:
+    active: true
+    methods:
+      - reason: 'print does not allow you to configure the output stream. Use a logger instead.'
+        value: 'kotlin.io.print'
+      - reason: 'println does not allow you to configure the output stream. Use a logger instead.'
+        value: 'kotlin.io.println'
+  MagicNumber:
+    excludes: []
+    ignoreLocalVariableDeclaration: true
   MandatoryBracesLoops:
+    active: true
+  MaxChainedCallsOnSameLine:
+    active: true
+  MultilineRawStringIndentation:
     active: true
   NoTabs:
     active: true
   NullableBooleanCheck:
     active: true
+  OptionalUnit:
+    active: true
+  RedundantVisibilityModifierRule:
+    active: true
+  ReturnCount:
+    active: true
+    max: 3
   SpacingBetweenPackageAndImports:
     active: true
   TrailingWhitespace:
     active: true
+  TrimMultilineRawString:
+    active: true
   UnderscoresInNumericLiterals:
+    active: true
+  UnnecessaryAnnotationUseSiteTarget:
     active: true
   UnnecessaryBackticks:
     active: true
+  UnnecessaryBracesAroundTrailingLambda:
+    active: true
+  UnnecessaryInnerClass:
+    active: true
+  UnnecessaryLet:
+    active: true
+  UnnecessaryParentheses:
+    active: true
+    allowForUnclearPrecedence: true
   UntilInsteadOfRangeTo:
     active: true
   UnusedImports:
     active: true
+  UseDataClass:
+    active: true
+  UseEmptyCounterpart:
+    active: true
   UseIfEmptyOrIfBlank:
     active: true
+  UseLet:
+    active: true
+  WildcardImport:
+    active: true
+    excludeImports: []
