--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,28 @@
     </modules>
 
     <properties>
-        <revision>9.0.1</revision>
+        <revision>9.0.2</revision>
         <changelist>-SNAPSHOT</changelist>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <execPluginVersion>3.1.0</execPluginVersion>
         <jakartaXmlBindApiVersion>4.0.0</jakartaXmlBindApiVersion>
         <comSunXmlBindVersion>4.0.1</comSunXmlBindVersion>
+        <kotlin.version>1.9.23</kotlin.version>
     </properties>
 
     <build>
         <plugins>
+
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+                <!-- You can set this option to automatically take information about lifecycles -->
+                <extensions>true</extensions>
+                <configuration>
+                    <jvmTarget>17</jvmTarget>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
